# sar-harness-core

./: .gitignore  README.md  pyproject.toml
src/harness_core/: __init__.py  checkpoint.py  dot_claude_cli.py  git_utils.py  metrics.py  prompt_editor.py
tests/: test_checkpoint.py  test_git_utils.py  test_metrics.py  test_prompt_editor.py
